--- a/lab06/lab06bio.html
+++ b/lab06/lab06bio.html
@@ -3,15 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Nicolette Angelotti -Bio</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
 
         
     </head>
 
     <body>
-        <h1>
-            Nicolette's Biography
-        </h1>
+        <h1 class="special">Nicolette's Biography</h1>
         <h2>
             Personal info
         </h2>
